--- a/views/websites/about-us.ejs
+++ b/views/websites/about-us.ejs
@@ -86,6 +86,229 @@ The School offers various undergraduate and postgraduate programmes.
 			</div>
 		</section>
 
+		<section class="team-area-three ptb-100">
+			<div class="container">
+				<div class="section-title" style="">
+					<h2>Management of the School of Business</h2>
+					<!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p> -->
+				</div>
+
+				<div class="row justify-content-md-center">
+					<div class="col-lg-4 col-md-6" style="margin-bottom: 120px!important;">
+						<div class="single-team-member">
+							<img src="images/team/pic-1694195157602-955985702.jpg" alt="Image">
+
+							<div class="team-content">
+								<div class="team-social">
+									<a href="#" class="control">
+										<i class="ri-share-fill"></i>
+									</a>
+
+									<ul>
+										<li>
+											<a href="https://www.facebook.com/" target="_blank">
+												<i class="ri-facebook-fill"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://www.instagram.com/" target="_blank">
+												<i class="ri-instagram-line"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://www.linkedin.com/" target="_blank">
+												<i class="ri-linkedin-fill"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://twitter.com/" target="_blank">
+												<i class="ri-twitter-fill"></i>
+											</a>
+										</li>
+									</ul>
+								</div>
+
+								<div class="team-name">
+									<h3>Prof. Ibrahim Osman Adam </h3>
+									<span>Dean</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6" style="margin-bottom: 120px!important;">
+						<div class="single-team-member">
+							<img src="images/team/pic-1694195947727-902952228.jpg" alt="Image">
+
+							<div class="team-content">
+								<div class="team-social">
+									<a href="#" class="control">
+										<i class="ri-share-fill"></i>
+									</a>
+
+									<ul>
+										<li>
+											<a href="https://www.facebook.com/" target="_blank">
+												<i class="ri-facebook-fill"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://www.instagram.com/" target="_blank">
+												<i class="ri-instagram-line"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://www.linkedin.com/" target="_blank">
+												<i class="ri-linkedin-fill"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://twitter.com/" target="_blank">
+												<i class="ri-twitter-fill"></i>
+											</a>
+										</li>
+									</ul>
+								</div>
+
+								<div class="team-name">
+									<h3>Prof. Issahaku Haruna </h3>
+									<span>Vice Dean</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6" style="margin-bottom: 120px!important;">
+						<div class="single-team-member">
+							<img src="images/team/pic-1690738111333-327844781.jpg" alt="Image">
+
+							<div class="team-content">
+								<div class="team-social">
+									<a href="#" class="control">
+										<i class="ri-share-fill"></i>
+									</a>
+
+									<ul>
+										<li>
+											<a href="https://www.facebook.com/" target="_blank">
+												<i class="ri-facebook-fill"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://www.instagram.com/" target="_blank">
+												<i class="ri-instagram-line"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://www.linkedin.com/" target="_blank">
+												<i class="ri-linkedin-fill"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://twitter.com/" target="_blank">
+												<i class="ri-twitter-fill"></i>
+											</a>
+										</li>
+									</ul>
+								</div>
+
+								<div class="team-name">
+									<h3>Ms. Patience </h3>
+									<span>School Officer</span>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- <div class="col-lg-4 col-md-6" style="margin-bottom: 120px!important;">
+						<div class="single-team-member">
+							<img src="images/team/sissu.jpg" alt="Image">
+
+							<div class="team-content">
+								<div class="team-social">
+									<a href="#" class="control">
+										<i class="ri-share-fill"></i>
+									</a>
+
+									<ul>
+										<li>
+											<a href="https://www.facebook.com/" target="_blank">
+												<i class="ri-facebook-fill"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://www.instagram.com/" target="_blank">
+												<i class="ri-instagram-line"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://www.linkedin.com/" target="_blank">
+												<i class="ri-linkedin-fill"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://twitter.com/" target="_blank">
+												<i class="ri-twitter-fill"></i>
+											</a>
+										</li>
+									</ul>
+								</div>
+
+								<div class="team-name">
+									<h3>Mr. Sissu Umar</h3>
+									<span>School Accountant</span>
+								</div>
+							</div>
+						</div>
+					</div> -->
+
+					<!-- <div class="col-lg-4 col-md-6" style="margin-bottom: 120px!important;">
+						<div class="single-team-member">
+							<img src="images/team/team-2.jpg" alt="Image">
+
+							<div class="team-content">
+								<div class="team-social">
+									<a href="#" class="control">
+										<i class="ri-share-fill"></i>
+									</a>
+
+									<ul>
+										<li>
+											<a href="https://www.facebook.com/" target="_blank">
+												<i class="ri-facebook-fill"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://www.instagram.com/" target="_blank">
+												<i class="ri-instagram-line"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://www.linkedin.com/" target="_blank">
+												<i class="ri-linkedin-fill"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://twitter.com/" target="_blank">
+												<i class="ri-twitter-fill"></i>
+											</a>
+										</li>
+									</ul>
+								</div>
+
+								<div class="team-name">
+									<h3>Ms. Rafia</h3>
+									<span>Junior Assistant Registrar</span>
+								</div>
+							</div>
+						</div>
+					</div> -->
+
+					
+                   
+					
+				</div>
+			</div>
+		</section>
+
 		<!-- Start Footer Area -->
 		<%- include('../partials/footer.ejs') %>
 
