--- a/views/dashboard/pages/news-list.ejs
+++ b/views/dashboard/pages/news-list.ejs
@@ -2,11 +2,19 @@
 <!doctype html>
 <html lang="en" data-layout="vertical" data-topbar="light" data-sidebar="dark" data-sidebar-size="lg" data-sidebar-image="none" data-preloader="disable">
 
-
+<% function formatDate(dateString) { %>
+    <%
+        const dateObject = new Date(dateString);
+        const options = { day: '2-digit', month: 'short' };
+        const formattedDate = dateObject.toLocaleDateString('en-US', options);
+       
+        return formattedDate;
+    %>
+  <% } %>
     <%- include('../partials/head.ejs') %>
 
 
-<body>
+<body> 
 
     <!-- Begin page -->
     <div id="layout-wrapper">
@@ -48,6 +56,7 @@
                                             </div>
     
                                             <div class="table-responsive table-card mt-3 mb-1">
+                                                <% if (news.length > 0) { %>
                                                 <table class="table align-middle table-nowrap" id="customerTable">
                                                     <thead class="table-light">
                                                         <tr >
@@ -64,6 +73,7 @@
                                                         </tr>
                                                     </thead>
                                                     <tbody class="list form-check-all">
+                                                        <% news.forEach((newsitem) => { %>
                                                         <tr>
                                                             <th scope="row">
                                                                 <div class="form-check">
@@ -71,27 +81,28 @@
                                                                 </div>
                                                             </th>
                                                             <td class="id" style="display:none;"><a href="javascript:void(0);" class="fw-medium link-primary">#VZ2101</a></td>
-                                                            <td >How I applied to the University</td>
-                                                            <td >Acadamics</td>
-                                                            <td >23 June, 2023</td>
+                                                            <td ><%= newsitem.title %></td>
+                                                            <td ><%= newsitem.category %></td>
+                                                            <td ><%= formatDate(newsitem.publishedDate)  %>, <%= newsitem.publishedDate.getFullYear() %></td>
                                                             
                                                             <td>
                                                                 <div class="d-flex gap-2">
                                                                     <a href="profile.html" class="edit">
                                                                         <button class="btn btn-sm btn-success edit-item-btn" data-bs-toggle="modal" data-bs-target="#showModal">View</button>
                                                                     </a>
-                                                                    <a href="create-profile.html" class="edit">
+                                                                    <a href="/update-news/<%= newsitem._id %>" class="edit">
                                                                         <button class="btn btn-sm btn-success edit-item-btn" data-bs-toggle="modal" data-bs-target="#showModal">Edit</button>
                                                                     </a>
                                                                     <div class="remove">
-                                                                        <button class="btn btn-sm btn-danger remove-item-btn" data-bs-toggle="modal" data-bs-target="#deleteRecordModal">Remove</button>
+                                                                        <button class="btn btn-sm btn-danger remove-item-btn" data-bs-toggle="modal" data-bs-target="#deleteRecordModal" onclick="confirmAndDelete('<%= newsitem._id %>','<%= newsitem.title %>')">Remove</button>
                                                                     </div>
                                                                 </div>
                                                             </td>
                                                         </tr>
-                                                       
+                                                        <% }); %>
                                                     </tbody>
                                                 </table>
+                                                <% } else { %>
                                                 <div class="noresult" style="display: none">
                                                     <div class="text-center">
                                                         <lord-icon src="https://cdn.lordicon.com/msoeawqm.json" trigger="loop" colors="primary:#121331,secondary:#08a88a" style="width:75px;height:75px"></lord-icon>
@@ -99,6 +110,7 @@
                                                         <p class="text-muted mb-0">We've searched more than 150+ Orders We did not find any orders for you search.</p>
                                                     </div>
                                                 </div>
+                                                <% } %>
                                             </div>
     
                                             <div class="d-flex justify-content-end">
@@ -143,5 +155,32 @@
 <!--end back-to-top-->
 
 <%- include('../partials/scripts.ejs') %>
+
+<script>
+          function confirmAndDelete(newsId, name) {
+    // Ask for user confirmation
+    const confirmDelete = confirm(`Are you sure you want to delete this News Item: ${name}?`);
+
+    // If user confirms, proceed with the deletion
+    if (confirmDelete) {
+      // Make the AJAX DELETE request to delete the event by ID
+      fetch(`/news/${newsId}`, {
+        method: 'DELETE',
+      })
+        .then(response => {
+          if (response.ok) {
+            // Event deleted successfully, reload the event list route
+            window.location.href = '/news-list';
+          } else {
+            // Event deletion failed, handle the error
+            console.error('Failed to delete event');
+          }
+        })
+        .catch(error => {
+          console.error('Failed to delete lecturer:', error);
+        });
+    }
+  }
+</script>
 </body>
 </html>
