--- a/views/websites/administrative_staff.ejs
+++ b/views/websites/administrative_staff.ejs
@@ -27,7 +27,7 @@
 				<div class="row justify-content-md-center">
 					<div class="col-lg-4 col-md-6" style="margin-bottom: 120px!important;">
 						<div class="single-team-member">
-							<img src="images/team/team-1.jpg" alt="Image">
+							<img src="images/team/pic-1690738111333-327844781.jpg" alt="Image">
 
 							<div class="team-content">
 								<div class="team-social">
@@ -60,14 +60,56 @@
 								</div>
 
 								<div class="team-name">
-									<h3>Mr. Osman Issah</h3>
-									<span>Department of Accounting</span>
+									<h3>Ms. Patience</h3>
+									<span>School Officer</span>
 								</div>
 							</div>
 						</div>
 					</div>
 
 					<div class="col-lg-4 col-md-6" style="margin-bottom: 120px!important;">
+						<div class="single-team-member">
+							<img src="images/team/sissu.jpg" alt="Image">
+
+							<div class="team-content">
+								<div class="team-social">
+									<a href="#" class="control">
+										<i class="ri-share-fill"></i>
+									</a>
+
+									<ul>
+										<li>
+											<a href="https://www.facebook.com/" target="_blank">
+												<i class="ri-facebook-fill"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://www.instagram.com/" target="_blank">
+												<i class="ri-instagram-line"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://www.linkedin.com/" target="_blank">
+												<i class="ri-linkedin-fill"></i>
+											</a>
+										</li>
+										<li>
+											<a href="https://twitter.com/" target="_blank">
+												<i class="ri-twitter-fill"></i>
+											</a>
+										</li>
+									</ul>
+								</div>
+
+								<div class="team-name">
+									<h3>Mr. Sissu Umar</h3>
+									<span>School Accountant</span>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- <div class="col-lg-4 col-md-6" style="margin-bottom: 120px!important;">
 						<div class="single-team-member">
 							<img src="images/team/team-2.jpg" alt="Image">
 
@@ -102,221 +144,14 @@
 								</div>
 
 								<div class="team-name">
-									<h3>Dr. Abdul Wahab Abdul Hamid</h3>
-									<span>Department of Business Analytics and Management Information (BAMIS)</span>
+									<h3>Ms. Rafia</h3>
+									<span>Junior Assistant Registrar</span>
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
-					<div class="col-lg-4 col-md-6" style="margin-bottom: 120px!important;">
-						<div class="single-team-member">
-							<img src="images/team/team-3.jpg" alt="Image">
-
-							<div class="team-content">
-								<div class="team-social">
-									<a href="#" class="control">
-										<i class="ri-share-fill"></i>
-									</a>
-
-									<ul>
-										<li>
-											<a href="https://www.facebook.com/" target="_blank">
-												<i class="ri-facebook-fill"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://www.instagram.com/" target="_blank">
-												<i class="ri-instagram-line"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://www.linkedin.com/" target="_blank">
-												<i class="ri-linkedin-fill"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://twitter.com/" target="_blank">
-												<i class="ri-twitter-fill"></i>
-											</a>
-										</li>
-									</ul>
-								</div>
-
-								<div class="team-name">
-									<h3>Dr. Yazidu Ustraz</h3>
-									<span>Department of Finance</span>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6" style="margin-bottom: 120px!important;">
-						<div class="single-team-member">
-							<img src="images/team/team-4.jpg" alt="Image">
-
-							<div class="team-content">
-								<div class="team-social">
-									<a href="#" class="control">
-										<i class="ri-share-fill"></i>
-									</a>
-
-									<ul>
-										<li>
-											<a href="https://www.facebook.com/" target="_blank">
-												<i class="ri-facebook-fill"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://www.instagram.com/" target="_blank">
-												<i class="ri-instagram-line"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://www.linkedin.com/" target="_blank">
-												<i class="ri-linkedin-fill"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://twitter.com/" target="_blank">
-												<i class="ri-twitter-fill"></i>
-											</a>
-										</li>
-									</ul>
-								</div>
-
-								<div class="team-name">
-									<h3>Dr. Iddrisu Issah</h3>
-									<span>Department of Human Resource and Organisational Development (HROD)</span>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6" style="margin-bottom: 120px!important;">
-						<div class="single-team-member">
-							<img src="images/team/team-5.jpg" alt="Image">
-
-							<div class="team-content">
-								<div class="team-social">
-									<a href="#" class="control">
-										<i class="ri-share-fill"></i>
-									</a>
-
-									<ul>
-										<li>
-											<a href="https://www.facebook.com/" target="_blank">
-												<i class="ri-facebook-fill"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://www.instagram.com/" target="_blank">
-												<i class="ri-instagram-line"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://www.linkedin.com/" target="_blank">
-												<i class="ri-linkedin-fill"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://twitter.com/" target="_blank">
-												<i class="ri-twitter-fill"></i>
-											</a>
-										</li>
-									</ul>
-								</div>
-
-								<div class="team-name">
-									<h3>Dr. Asitik Joseph Akangangang</h3>
-									<span>Department of Marketing and Entrepreneurship (M&E)</span>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-lg-4 col-md-6" style="margin-bottom: 120px!important;">
-						<div class="single-team-member">
-							<img src="images/team/team-6.jpg" alt="Image">
-
-							<div class="team-content">
-								<div class="team-social">
-									<a href="#" class="control">
-										<i class="ri-share-fill"></i>
-									</a>
-
-									<ul>
-										<li>
-											<a href="https://www.facebook.com/" target="_blank">
-												<i class="ri-facebook-fill"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://www.instagram.com/" target="_blank">
-												<i class="ri-instagram-line"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://www.linkedin.com/" target="_blank">
-												<i class="ri-linkedin-fill"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://twitter.com/" target="_blank">
-												<i class="ri-twitter-fill"></i>
-											</a>
-										</li>
-									</ul>
-								</div>
-
-								<div class="team-name">
-									<h3>Dr. Stepehen Tetteh</h3>
-									<span>Department of Public and Health Services Administration (PAHSA)</span>
-								</div>
-							</div>
-						</div>
-					</div>
-                    <div class="col-lg-4 col-md-6" style="margin-bottom: 120px!important;">
-						<div class="single-team-member">
-							<img src="images/team/team-6.jpg" alt="Image">
-
-							<div class="team-content">
-								<div class="team-social">
-									<a href="#" class="control">
-										<i class="ri-share-fill"></i>
-									</a>
-
-									<ul>
-										<li>
-											<a href="https://www.facebook.com/" target="_blank">
-												<i class="ri-facebook-fill"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://www.instagram.com/" target="_blank">
-												<i class="ri-instagram-line"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://www.linkedin.com/" target="_blank">
-												<i class="ri-linkedin-fill"></i>
-											</a>
-										</li>
-										<li>
-											<a href="https://twitter.com/" target="_blank">
-												<i class="ri-twitter-fill"></i>
-											</a>
-										</li>
-									</ul>
-								</div>
-
-								<div class="team-name">
-									<h3>Mr. Mubarik Abdul Mumin</h3>
-									<span>Department of Procurement and Supply Chain Management (PSCM)</span>
-								</div>
-							</div>
-						</div>
-					</div>
+					
                    
 					
 				</div>
