Added-apply-now-link

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,7 +9,7 @@
         <%- include('../partials/styles.ejs') %>
 
 		<!-- Title -->
-		<title>UDS Business School</title>
+		<title>UDS School of Business</title>
 
     </head>
 	<script>
