--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -46,7 +46,7 @@
 							<div class="others-options-for-mobile-devices">
 								<ul>
 									<li>
-										<a href="application.html" class="default-btn">
+										<a href="https://admissions.uds.edu.gh" class="default-btn">
 											Apply Now
 										</a>
 									</li>
