Added-apply-now-link

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -164,7 +164,7 @@
                                 <div class="others-options">
 									<ul>
 										<li>
-											<a href="Business" class="default-btn">
+											<a href="https://admissions.uds.edu.gh" class="default-btn">
 												Apply Now
 											</a>
 										</li>
